# stunning-octo-umbrella

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
include/: MyComponent.hpp
src/: MyComponent.cpp  main.cpp
tests/unit/: test_get_hello_world.cpp
